# rusty_mysql_handler

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .markdownlint.json  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  deny.toml  release-plz.toml  rust-toolchain.toml
.githooks/: pre-commit
.github/: dependabot.yml  release.yml
.github/workflows/: audit.yml  ci.yml  e2e.yml  github-release.yml  perf.yml  pr-title-lint.yml  publish-mysql-base.yml  publish-rust.yml  release-dry-run.yml  release-plz.yml
benches/: callback_overhead.rs  ffi_overhead.rs
benches/callback_overhead/: common.rs  index_basic.rs  main.rs  row_operations.rs  scan.rs  statistics.rs
benches/common/: mod.rs  noop_engine.rs
docs/: architecture.md
docs/api/: README.md  coverage.md  handler.md  handlerton.md
examples/engine/: Cargo.toml  build.rs
examples/engine/src/: lib.rs  plugin_manifest.rs  registration.rs  store.rs  trivial_engine.rs  trivial_handlerton.rs  trivial_txn.rs
examples/engine/src/engine/: crud.rs  indexed_impl.rs  lookup.rs  mod.rs  scan.rs  stats.rs
examples/engine/src/store/: btree_store.rs  column_meta.rs  index_meta.rs  key.rs  key_part_meta.rs  mod.rs  table_meta.rs
mysql-handler/: Cargo.toml  README.md  build.rs
mysql-handler-build/: Cargo.toml  README.md
mysql-handler-build/src/: lib.rs
mysql-handler-macros/: Cargo.toml  README.md
mysql-handler-macros/src/: args.rs  capability.rs  expand.rs  lib.rs
mysql-handler-macros/src/args/: tests.rs
mysql-handler-macros/src/expand/: capabilities_impl.rs  manifest.rs  plugin_init.rs
mysql-handler/benches/: ffi_overhead.rs
mysql-handler/benches/callback_overhead/: common.rs  index_basic.rs
mysql-handler/benches/common/: noop_engine.rs
mysql-handler/shim/: CMakeLists.txt  bindgen_input.h  binding.cc  binding.hpp  dd_table.cc  handler_caps.cc  handler_fulltext.cc  handler_index_admin.cc  handler_index_basic.cc  handler_mrr.cc  handler_read_removal_autoinc.cc  hton_binlog.cc  hton_clone.cc  hton_dict.cc  hton_engine_log.cc  hton_misc.cc  hton_notifications.cc  hton_secondary_engine.cc  hton_status.cc  hton_xa.cc  rust_callbacks.hpp  safe_name.hpp
mysql-handler/shim/rust_callbacks/: bulk_operations.hpp  dd_table.hpp  error_handling.hpp  hints.hpp  hton_discovery.hpp  hton_engine_log.hpp  hton_fk_hooks.hpp  hton_lifecycle.hpp  hton_misc.hpp  hton_notifications.hpp  hton_page_track.hpp  hton_xa.hpp  index_basic.hpp  index_range.hpp  locking.hpp  misc.hpp  parallel_scan.hpp  properties.hpp  pushdown.hpp  read_removal_autoinc.hpp  row_operations.hpp  sampling.hpp
mysql-handler/src/: dd.rs  engine.rs  hton.rs  lib.rs  license.rs  panic_guard.rs  prelude.rs  sys.rs
mysql-handler/src/dd/: ffi.rs  index.rs
mysql-handler/src/engine/: bulk_access.rs  cost_estimate.rs  reset_cached_state.rs  sampling_method.rs
mysql-handler/src/handler/: bulk_load.rs  cost.rs  cost_time.rs  hints.rs  index_admin.rs  index_pushed.rs  inplace_alter.rs  locking.rs  maintenance.rs  mrr.rs  open_close.rs  parallel_scan.rs  pushdown.rs  records.rs  report.rs  row_operations.rs  sampling.rs
mysql-handler/src/hton/: binlog.rs  clone.rs  cost_constants.rs  database.rs  dict.rs  dict_kind.rs  engine_log.rs  lifecycle.rs  misc_optimizer.rs  misc_stats.rs  notifications.rs  page_track.rs  recover_xa_state.rs  savepoint_ffi.rs  secondary_engine.rs  secondary_engine_fail_reason.rs  statistics_callbacks.rs  table_statistics.rs  tablespace_statistics.rs  txn_context.rs  txn_ffi.rs  txn_row_ffi.rs  xa.rs  xa_recover_collector.rs  xa_state_list_collector.rs
mysql-handler/src/runtime/: hton_registry.rs  ptr.rs
scripts/: audit-bind-coverage.sh  check-license.sh  check-pr-title.sh  license-header.txt  populate-release-notes.sh
shim/: CMakeLists.txt  bindgen_input.h  binding.cc  binding.hpp  handler_bulk_load.cc  handler_bulk_operations.cc  handler_caps.cc  handler_cost.cc  handler_error_handling.cc  handler_hints.cc  handler_index_pushed.cc  handler_index_range.cc  handler_inplace_alter.cc  handler_lifecycle.cc  handler_limits.cc  handler_locking.cc  handler_maintenance.cc  handler_metadata.cc  handler_misc.cc  handler_parallel_scan.cc  handler_pushdown.cc  handler_records.cc  handler_row_operations.cc  handler_sampling.cc  hton_binlog.cc  hton_discovery.cc  hton_fk_hooks.cc  hton_init.cc  hton_lifecycle.cc  hton_misc.cc  hton_notifications.cc  hton_page_track.cc  hton_savepoint.cc  hton_sdi.cc  hton_tablespace.cc  hton_transactions.cc  hton_xa.cc  plugin.cc  rust_callbacks.hpp  safe_name.hpp
shim/rust_callbacks/: bulk_load.hpp  caps.hpp  core.hpp  cost.hpp  fulltext.hpp  hton_binlog.hpp  hton_clone.hpp  hton_core.hpp  hton_dict.hpp  hton_savepoint.hpp  hton_sdi.hpp  hton_secondary_engine.hpp  hton_status.hpp  hton_tablespace.hpp  hton_transactions.hpp  index_admin.hpp  index_pushed.hpp  inplace_alter.hpp  lifecycle.hpp  limits.hpp  locking.hpp  maintenance.hpp  metadata.hpp  mrr.hpp  properties.hpp  records.hpp
src/: engine.rs  ffi.rs  ffi_handler.rs  handler.rs  hton.rs  lib.rs  panic_guard.rs  prelude.rs  runtime.rs  sys.rs  sys_bindings.rs
src/dd/: column.rs  table.rs
src/engine/: bulk_access.rs  bulk_load.rs  capabilities.rs  cost_estimate.rs  error.rs  indexed.rs  parallel_scan_init.rs  range_key.rs  reset_cached_state.rs  rkey_function.rs  secondary.rs  transactional.rs
src/ffi/: context.rs  ptr.rs  registry.rs
src/ffi_handler/: index_basic.rs  open_close.rs  properties.rs  row_operations.rs  scan.rs  statistics.rs  table_lifecycle.rs
src/handler/: bulk_operations.rs  caps.rs  caps_features.rs  cost.rs  cost_time.rs  error_handling.rs  fulltext.rs  index_basic.rs  index_pushed.rs  index_range.rs  index_records.rs  limits.rs  metadata.rs  misc.rs  mrr.rs  open_close.rs  properties.rs  read_removal_autoinc.rs  records.rs  report.rs  scan.rs  statistics.rs  table_lifecycle.rs
src/hton/: binlog.rs  binlog_kind.rs  capabilities.rs  capability_ffi.rs  clone_kind.rs  dict.rs  discovery.rs  engine_log.rs  ffi.rs  fk_hooks.rs  flags.rs  misc_optimizer.rs  misc_stats.rs  notification_kind.rs  result.rs  (+13 more)
(+24 files in other folders)
