[package]
name = "mysql-handler"
version = "0.1.0"
description = "Rust bindings for the MySQL handler"
readme = "README.md"
authors = ["ren-yamanashi"]
license = "GPL-2.0-only"
edition = "2024"
repository = "https://github.com/ren-yamanashi/rusty_mysql_handler"
homepage = "https://github.com/ren-yamanashi/rusty_mysql_handler"
documentation = "https://docs.rs/mysql-handler"
keywords = ["mysql", "ffi", "plugin", "storage-engine", "handler"]
categories = ["api-bindings", "database", "external-ffi-bindings"]
rust-version = "1.85"
links = "ha_rusty_shim"
# Whitelist what ships to crates.io. Notable deliberate omissions:
# - `mysql-server/` (the MySQL submodule, ~48k files / 1 GiB; users supply
#   their own headers via `MYSQL_HANDLER_FROM_SOURCE` / a release asset).
# - `examples/` (separate workspace member, published as its own demo).
# - `tests/`, `docs/`, `.github/`, `Makefile`, `rust-toolchain.toml`
#   (developer infra; pinning toolchain or repo workflow into downstream
#   crates would surprise them).
# Re-evaluate this list before adding a new top-level file that downstream
# users genuinely need at build time.
include = [
  "src/**/*.rs",
  "shim/**/*.cc",
  "shim/**/*.hpp",
  "shim/**/*.h",
  "shim/CMakeLists.txt",
  "build.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE",
]

[package.metadata.docs.rs]
# The build script's default path (no env var) skips bindgen and the cmake
# shim build and re-uses the vendored `src/sys_bindings.rs`, so docs.rs can
# build the rlib without MySQL headers or a C++ toolchain. `--cfg docsrs`
# is wired so future doc-only items can gate on it.
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["examples/engine"]

[dependencies]
tracing = "0.1.41"

[build-dependencies]
bindgen = "0.71.1"
cmake = "0.1.58"
flate2 = "1.1.9"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unsafe_code = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
missing_panics_doc = "allow"
single_match_else = "allow"
manual_let_else = "allow"
undocumented_unsafe_blocks = "deny"
redundant_pub_crate = "warn"

[profile.release]
lto = true
codegen-units = 1
# `catch_unwind` at the FFI boundary requires unwinding panics
panic = "unwind"
