[workspace]
resolver = "3"
members = [
  "mysql-handler",
  "mysql-handler-build",
  "mysql-handler-macros",
  "examples/engine",
]

# Workspace-shared version, inherited by every published crate so a single
# release-plz bump moves all three to the same number in lockstep.
[workspace.package]
version = "0.2.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unsafe_code = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
missing_panics_doc = "allow"
single_match_else = "allow"
manual_let_else = "allow"
undocumented_unsafe_blocks = "deny"
redundant_pub_crate = "warn"

[profile.release]
lto = true
codegen-units = 1
# `catch_unwind` at the FFI boundary requires unwinding panics
panic = "unwind"
