[package]
name = "engine"
version = "0.1.0"
description = "Minimal storage engine for testing mysql-handler"
authors = ["ren-yamanashi"]
license = "GPL-2.0-only"
edition = "2024"
rust-version = "1.85"
publish = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
mysql-handler = { path = "../..", version = "0.1.1" }

[build-dependencies]
mysql-handler-build = { path = "../../mysql-handler-build", version = "0.1.0" }
